# sparx-learning-task

./: README.md  pyproject.toml
src/: analysis.ipynb
